--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.url=jdbc:sqlserver://localhost;databaseName=pimdb
 spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.password=Fr@nc15_000
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 ## Hibernate Properties
@@ -9,4 +9,4 @@ spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.SQLServer2012Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
